--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Cafe con Sentido</title>
-    <link rel="stylesheet" href="./style.css" />
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
+
     <link
       rel="shortcut icon"
       href="./img/Logo_Cafe_con_sentido-05.png"
@@ -13,39 +21,168 @@
     />
   </head>
   <body>
-    <div class="container-home">
-      <header>
-        <!--Menu que irá en todas las páginas-->
-        <input type="checkbox" id="btn-menu" />
-        <label for="btn-menu">
-          <img id="img-hamburg" src="./img/hamburg.png" />
-        </label>
-        <nav class="menu">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="./pages/quienessomos.html">Quienes somos</a></li>
-            <li><a href="./pages/talleres.html">Talleres y Aprendizajes</a></li>
-            <li><a href="./pages/confian.html">Confian en nosotros</a></li>
-            <li><a href="./pages/contactanos.html">Habla con un coach</a></li>
-          </ul>
-        </nav>
-        <!--Fin Menu-->
-      </header>
-      <main>
-        <!-- Slider Home-->
-        <div class="main__slider">
-          <ul>
-            <li><img src="./img/imagen1.jpeg" alt="" /></li>
-            <li><img src="./img/imagen2.jpeg" alt="" /></li>
-            <li><img src="./img/imagen3.jpeg" alt="" /></li>
-          </ul>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Café con Sentido</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">
+                  Inicio
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Talleres</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Clientes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Buscar
+              </button>
+            </form>
+          </div>
         </div>
-        <!--Fin Slider-->
-      </main>
+      </nav>
+    </header>
 
+    <main>
+      <div
+        id="carouselExampleCaptions"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="./img/carrusel3.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>BIENVENIDO DICIEMBRE</h2>
+              <h5>
+                Que este fin de año nos permita 
+              </h5>
+                <h5>
+                agradecer lo logrado y renovar energias para seguir avanzando hacia nuestros propósitos.
+              </h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./img/carrusel2.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>¿QUE ES ACUMULAR TIEMPO PSICOLOGICO</h2>
+              <h5>
+                Pensar a menudo en lo que ya pasó e identificarse con ese pasado.
+              </h5> 
+              <h5> 
+                Asi mismo, proyectarse compulsivamente al futuro anticipándose a lo que aun no pasa. 
+              </h5>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./img/carrusel1.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+            <div class="carousel-caption d-none d-md-block">
+              <h2>PRESENTE</h2>
+              <h5>
+                Que sea tu lugar favorito.
+              </h5>
+            </div>
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleCaptions"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+      <footer class="container">
+        <p class="float-end"><a href="#">Ir al inicio</a></p>
+        <p>&copy; 2022 Café con Sentido &middot;</p>
+      </footer>
+
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"
+      ></script>
+    </main>
+
+    <!--
       <div id="main-home__content1">
-        <img src="./img/imagen-content1.jpg" class="content__img"/>
-      
+        <img src="./img/imagen-content1.jpg" class="content__img" />
+
         <p>
           "Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
           accusamus ut quos adipisci repellat commodi, tempore molestias dolores
@@ -54,26 +191,28 @@
         </p>
       </div>
       <div id="main-home__content2">
-        <img src="./img/imagen-content2.jpg" class="content__img"/>
+        <img src="./img/imagen-content2.jpg" class="content__img" />
         <p>
-         "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit
           adipisci, atque iste blanditiis repudiandae voluptate. Reprehenderit
           aliquid commodi ea deserunt, nihil itaque architecto ullam, vero
           tenetur fugit adipisci, corrupti omnis."
         </p>
       </div>
       <div id="main-home__content3">
-        <img src="./img/imagen-content3.jpg" class="content__img"/>
+        <img src="./img/imagen-content3.jpg" class="content__img" />
         <p>
-          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt quas
-          praesentium, amet corrupti minima tempore similique cum quaerat
+          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+          quas praesentium, amet corrupti minima tempore similique cum quaerat
           impedit hic dolor reprehenderit quam cumque laboriosam nulla nam ut
           rerum eos."
         </p>
       </div>
       <footer>
-        <div class="footer__derechos"><p> © 2021 Café con Sentido.</p></div>
+        <div class="footer__derechos"><p>© 2021 Café con Sentido.</p></div>
       </footer>
     </div>
+
+-->
   </body>
 </html>
