Todo listo para continuar con las otras pages

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Nosotros</a>
+                <a class="nav-link" href="./pages/quienessomos.html">Quienes somos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Talleres</a>
+                <a class="nav-link" href="./pages/talleres.html">Talleres</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Clientes</a>
+                <a class="nav-link" href="./pages/confian.html">Clientes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="./pages/contactanos.html">Contacto</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -167,9 +167,8 @@
         </button>
       </div>
 
-      <footer class="container">
-        <p class="float-end"><a href="#">Ir al inicio</a></p>
-        <p>&copy; 2022 Café con Sentido &middot;</p>
+      <footer class="container-fluid">
+        <span>&copy; Café con Sentido. </span>
       </footer>
 
       <script
