--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Habla con un Coach</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+
     <link
       rel="shortcut icon"
       href="../img/Logo_Cafe_con_sentido-05.png"
@@ -13,24 +20,58 @@
     />
   </head>
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Café con Sentido</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">
+                  Inicio
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./quienessomos.html">Quienes somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./talleres.html">Talleres</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./confian.html">Clientes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contactanos.html">Contacto</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Buscar
+              </button>
+            </form>
+          </div>
+        </div>
+      </nav>
+    </header>
     <div class="container-contactanos">
-      <header>
-        <!--Menu que irá en todas las páginas-->
-        <input type="checkbox" id="btn-menu" />
-        <label for="btn-menu">
-          <img id="img-hamburg" src="../img/hamburg.png" />
-        </label>
-        <nav class="menu">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./quienessomos.html">Quienes somos</a></li>
-            <li><a href="./talleres.html">Talleres y Aprendizajes</a></li>
-            <li><a href="./confian.html">Confian en nosotros</a></li>
-            <li><a href="./contactanos.html">Habla con un coach</a></li>
-          </ul>
-        </nav>
-        <!--Fin Menu-->
-      </header>
+    
       <main class="main--degrade1">
         <div>
           <h1 class="main__h1">Habla con un Coach</h1>
@@ -38,37 +79,50 @@
       </main>
       <div class="contactanos__content">
         <form action="#">
-            <div>
+          <div>
             <label for="nombre">Nombre</label>
-            <input type="text" id="nombre" placeholder="ingrese su nombre">
-        </div>
-        <div>
+            <input type="text" id="nombre" placeholder="ingrese su nombre" />
+          </div>
+          <div>
             <label for="email">email</label>
-            <input type="email" id="email" placeholder="ingrese su email">
-        </div>
+            <input type="email" id="email" placeholder="ingrese su email" />
+          </div>
 
-        <div>
+          <div>
             <!--Radio Button-->
             <label for="tipo">Empresa</label>
-            <input type="radio" name="tipo" value="empresa">
+            <input type="radio" name="tipo" value="empresa" />
             <label for="tipo">Persona</label>
-            <input type="radio" name="tipo" value="persona">
-        </div>
-        <div> 
+            <input type="radio" name="tipo" value="persona" />
+          </div>
+          <div>
             <!--Text Area-->
-            <textarea name="" id="" cols="30" rows="10" placeholder="Ingrese su comentario"></textarea>
-        </div>
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Ingrese su comentario"
+            ></textarea>
+          </div>
 
-            <!--Botones-->
-        <div>
-            <input type="submit" value="Enviar ahora">
-            <input type="reset" value="Borrar todo">
-        </div>
+          <!--Botones-->
+          <div>
+            <input type="submit" value="Enviar ahora" />
+            <input type="reset" value="Borrar todo" />
+          </div>
         </form>
       </div>
-      <footer>
-        <div class="footer__derechos"><p>© 2021 Café con Sentido.</p></div>
-      </footer>
+
     </div>
+    <footer class="container-fluid">
+      <span>&copy; Café con Sentido. </span>
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
