--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Talleres</title>
-    <link rel="stylesheet" href="../style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
+
     <link
       rel="shortcut icon"
       href="../img/Logo_Cafe_con_sentido-05.png"
@@ -13,66 +20,107 @@
     />
   </head>
   <body>
-    <div class="container-talleres">
-      <header>
-        <!--Menu que irá en todas las páginas-->
-        <input type="checkbox" id="btn-menu" />
-        <label for="btn-menu">
-          <img id="img-hamburg" src="../img/hamburg.png" />
-        </label>
-        <nav class="menu">
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./quienessomos.html">Quienes somos</a></li>
-            <li><a href="./talleres.html">Talleres y Aprendizajes</a></li>
-            <li><a href="./confian.html">Confian en nosotros</a></li>
-            <li><a href="./contactanos.html">Habla con un coach</a></li>
-          </ul>
-        </nav>
-        <!--Fin Menu-->
-      </header>
-      <main class="main--degrade1">
-        <div>
-          <h1 class="main__h1">Talleres y Aprendizajes</h1>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Café con Sentido</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../index.html">
+                  Inicio
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./quienessomos.html">Quienes somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./talleres.html">Talleres</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./confian.html">Clientes</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./contactanos.html">Contacto</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Buscar
+              </button>
+            </form>
+          </div>
         </div>
-      </main>
+      </nav>
+    </header>
+    <main>
+      <div class="container-talleres">
+        
+        <main class="main--degrade1">
+          <div>
+            <h1 class="main__h1">Talleres y Aprendizajes</h1>
+          </div>
+        </main>
 
-      <div id="talleres__content1">
-        <img src="../img/taller1.jpg" class="content__img"/>
+        <div id="talleres__content1">
+          <img src="../img/taller1.jpg" class="content__img" />
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-          accusamus ut quos adipisci repellat commodi, tempore molestias dolores
-          voluptates repellendus. Quod sequi quasi repellat voluptates
-          reiciendis odio corrupti neque quia.
-        </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+            accusamus ut quos adipisci repellat commodi, tempore molestias
+            dolores voluptates repellendus. Quod sequi quasi repellat voluptates
+            reiciendis odio corrupti neque quia.
+          </p>
+        </div>
+
+        <div id="talleres__content2">
+          <img src="../img/taller2.jpg" class="content__img" />
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+            accusamus ut quos adipisci repellat commodi, tempore molestias
+            dolores voluptates repellendus. Quod sequi quasi repellat voluptates
+            reiciendis odio corrupti neque quia.
+          </p>
+        </div>
+
+        <div id="talleres__content3">
+          <img src="../img/taller3.jpg" class="content__img" />
+
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
+            accusamus ut quos adipisci repellat commodi, tempore molestias
+            dolores voluptates repellendus. Quod sequi quasi repellat voluptates
+            reiciendis odio corrupti neque quia.
+          </p>
+        </div>
       </div>
-
-      <div id="talleres__content2">
-        <img src="../img/taller2.jpg" class="content__img"/>
-
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-          accusamus ut quos adipisci repellat commodi, tempore molestias dolores
-          voluptates repellendus. Quod sequi quasi repellat voluptates
-          reiciendis odio corrupti neque quia.
-        </p>
-      </div>
-
-      <div id="talleres__content3">
-        <img src="../img/taller3.jpg" class="content__img"/>
-
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam
-          accusamus ut quos adipisci repellat commodi, tempore molestias dolores
-          voluptates repellendus. Quod sequi quasi repellat voluptates
-          reiciendis odio corrupti neque quia.
-        </p>
-      </div>
-
-      <footer>
-        <div class="footer__derechos"><p>© 2021 Café con Sentido.</p></div>
+      <footer class="container-fluid">
+        <span>&copy; Café con Sentido.</span>
       </footer>
-    </div>
+
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"
+      ></script>
+    </main>
   </body>
 </html>
