--- a/pages/confian.html
+++ b/pages/confian.html
@@ -38,7 +38,11 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="../index.html"
+                >
                   Inicio
                 </a>
               </li>
@@ -70,25 +74,32 @@
         </div>
       </nav>
     </header>
-    <div class="container-confian">
-      
-      <main class="main--degrade1">
-        <div>
-          <h1 class="main__h1">Confían en nosotros</h1>
-        </div>
-      </main>
-      <div class="confian__content">
-        <img src="../img/flat-logos-1024x576.png" alt="" />
-      </div>
-    </div>
-    <footer class="container-fluid">
-      <span>&copy; Café con Sentido.</span>
-    </footer>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <main>
+      <div class="container marketing">
+        <div class="row py-lg-5">
+          <h1 class="fw-light">Clientes</h1>
+          <p class="lead text-muted">
+            Café con Sentido Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Illum, sed voluptatum beatae libero ut velit adipisci! Officia
+            fugiat porro tempora reiciendis libero ea! Eveniet corporis numquam
+            fuga sed optio ipsa.
+          </p>
+        </div>
+
+        <div class="container">
+          <img src="../img/flat-logos-1024x576.png" alt="" />
+        </div>
+      </div>
+      <footer class="container-fluid">
+        <span>&copy; Café con Sentido.</span>
+      </footer>
+
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"
+      ></script>
+    </main>
   </body>
 </html>
