Correcciones y mas contenido para entrega

--- a/pages/confian.html
+++ b/pages/confian.html
@@ -76,25 +76,73 @@
     </header>
 
     <main>
-      <div class="container marketing">
-        <div class="row py-lg-5">
-          <h1 class="fw-light">Clientes</h1>
-          <p class="lead text-muted">
-            Café con Sentido Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Illum, sed voluptatum beatae libero ut velit adipisci! Officia
-            fugiat porro tempora reiciendis libero ea! Eveniet corporis numquam
-            fuga sed optio ipsa.
-          </p>
+        <section class="py-5 text-center container">
+          <img
+            src="../img/Logo_Cafe_con_sentido-01.png"
+            class="img-fluid-logo"
+            alt=""
+          />
+  
+          <div class="row py-lg-5">
+            <div class="col-lg-11 col-md-8 mx-auto">
+              <h1 class="fw-light">Nuestros clientes</h1>
+              <p class="lead text-muted">
+               Nuestros clientes logran grandes cambios, gracias a las poderosas herramientas de autoconocimiento que ponemos a disposicion.
+              </p>
+              <p class="lead text-muted">
+                ¿Qué es lo que dicen?
+              </p>
+            </div>
+          </div>
+        </section>
+        <div class="container marketing">
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/logo-estacion.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Municipalidad de Estacion Central</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti ratione quis iste perferendis neque vel magnam, soluta adipisci doloribus inventore porro distinctio assumenda pariatur molestias excepturi minima cum rem omnis?</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Guillermo Peña - Director</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/PDI.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Policía de Investigaciones - PDI</h5>
+                  <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam, voluptas voluptatem beatae quam quasi labore, porro eaque impedit pariatur illum accusamus alias in culpa, atque voluptates molestiae commodi debitis expedita?</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Alejandra Vega - Comisaria</small>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="../img/embajadoras.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Programa Embajadoras con Experiencia</h5>
+                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum hic placeat facere quis cum neque, perferendis maxime ducimus magnam quisquam adipisci. Eos eius quasi animi, praesentium odio placeat unde rem.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Julia Carreño - Embajadora</small>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      
 
-        <div class="container">
-          <img src="../img/flat-logos-1024x576.png" alt="" />
-        </div>
-      </div>
+
+
       <footer class="container-fluid">
         <span>&copy; Café con Sentido.</span>
       </footer>
-
+    </main>
       <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
