--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -83,13 +83,22 @@
         />
 
         <div class="row py-lg-5">
-          <div class="col-lg-6 col-md-8 mx-auto">
+          <div class="col-lg-11 col-md-8 mx-auto">
             <h1 class="fw-light">Quienes Somos</h1>
             <p class="lead text-muted">
-              Café con Sentido Lorem ipsum dolor sit amet consectetur
-              adipisicing elit. Illum, sed voluptatum beatae libero ut velit
-              adipisci! Officia fugiat porro tempora reiciendis libero ea!
-              Eveniet corporis numquam fuga sed optio ipsa.
+              Muchos de nosotros tenemos dificultades para sentirnos plenos.
+              Existen diversos motivos como sentir ansiedad por el futuro, el sufrimiento por hechos pasados, aprendizajes que antiguamente nos sirvieron pero que ahora nos limitan, la falta de autoconocimiento, la sensación de soledad, el compararnos con la vida de otros, una desconexión emocional y tantos otros aspectos que impiden lograr nuestro objetivo de vivir con paz y armonía.
+            </p>
+            <p class="lead text-muted">
+              Nuestro propósito es hacer personas y equipos más felices y junto con ello transformar positivamente el entorno, tendiendo puentes para que habitemos una vida de manera diferente, una vida con una plenitud real y sostenible.
+En Café con Sentido desarrollamos espacios de escucha, de inspiración, de creatividad, de cercanía y cuidado para poner al servicio de todos los participantes poderosas herramientas de autoconocimiento que permiten avanzar hacia una mejor versión de sí mismos y una mayor felicidad.
+            </p>
+            <p class="lead text-muted">
+              Cientos de personas han pasado por nuestros talleres transformando sus vidas, volviendo a conectarse con el presente, liberando tensiones y mejorando las relaciones con sus seres queridos y con ellos mismos, logrando una mayor plenitud.
+
+            </p>
+            <p class="lead text-muted">
+              Te invitamos a trabajar con nosotros, a inscribirte a nuestros espacios y talleres donde el único objetivo es que vivas una vida más feliz.
             </p>
             <p>
               <a href="./contactanos.html" class="btn btn-primary my-2">
