--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -79,10 +79,11 @@
         <div class="row py-lg-5">
           <h1 class="fw-light">Talleres y Aprendizajes</h1>
           <p class="lead text-muted">
-            Café con Sentido Lorem ipsum dolor sit amet consectetur adipisicing
-            elit. Illum, sed voluptatum beatae libero ut velit adipisci! Officia
-            fugiat porro tempora reiciendis libero ea! Eveniet corporis numquam
-            fuga sed optio ipsa.
+            En Café con Sentido hemos creado espacios de escucha, de
+            aprendizajes, de inspiración y creatividad para poner al servicio de
+            personas, empresas y de toda la comunidad entregando poderosas
+            herramientas de autoconocimiento y cuidado para avanzar a una mejor
+            versión de sí mismos y una mayor plenitud.
           </p>
         </div>
 
@@ -91,37 +92,66 @@
           <div class="col-lg-4">
             <img src="../img/taller1.jpg" class="content__img" />
 
-            <h2>Taller 1</h2>
-            <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi
-              amet, obcaecati corporis cupiditate ipsam minus nam placeat, ea
-              error, itaque sed eaque. Deleniti eum cupiditate animi provident
-              eius dolore tenetur?
+            <h4>La libertad de ser feliz</h4>
+            <p class="text-muted">
+              ¿Por qué cuando cumplo mis objetivos soy feliz pero pareciera que
+              no por mucho tiempo? ¿Por qué cuando llegó a ese lugar que he
+              soñado soy feliz pero nuevamente la felicidad pareciera escaparse?
+            </p>
+            <p class="text-muted">
+              ¿Qué es la felicidad? Y ¿Cómo la puedo sostener en el tiempo? En
+              este taller exploramos un tema tan fascinante y subjetivo como lo
+              es la felicidad como también te entregamos poderosas y sencillas
+              claves para vivir con ella.
+            </p>
+            <p class="text-muted">
+              Un centenar de personas han pasado por pasado por este taller
+              experimentando una nueva mirada de la felicidad y haciéndola
+              perdurable en el tiempo.
             </p>
             <p><a class="btn btn-secondary" href="#">Ver detalle &raquo;</a></p>
           </div>
 
-          <div class="col-lg-4">
-            <img src="../img/taller2.jpg" class="content__img" />
-
-            <h2>Taller 2</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni,
-              fugit. Dolorum, nostrum possimus hic accusamus impedit maiores
-              ratione saepe, quae quaerat, similique repellendus placeat
-              exercitationem aut?
-            </p>
-            <p><a class="btn btn-secondary" href="#">Ver detalle &raquo;</a></p>
-          </div>
           <div class="col-lg-4">
             <img src="../img/taller3.jpg" class="content__img" />
 
-            <h2>Taller 3</h2>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Quisquam, eligendi corporis! Consectetur facere quos laudantium?
-              Explicabo quidem praesentium veritatis rerum repudiandae dolor.
+            <h4>Descubriendo la meditación</h2>
+            <p class="text-muted">
+              No importa cuántos libros leas sobre andar en bicicleta, si no te
+              subes y practicas no aprenderás nunca... En la meditación es lo
+              mismo. Si quieres aprender, entonces medita.
             </p>
+            <p class="text-muted">
+              Para iniciarte en la meditación te dejamos invitado a nuestro
+              taller "Descubriendo la meditación y sus beneficios para la vida",
+              donde no solo mostramos conceptos que resultan esenciales a la
+              hora de meditar sino que también hacemos algunos ejercicios que te
+              ayudarán a "subirte a la bicicleta".
+            </p>
+            <p><a class="btn btn-secondary" href="#">Ver detalle &raquo;</a></p>
+          </div>
+          <div class="col-lg-4">
+            <img src="../img/taller2.jpg" class="content__img" />
+
+            <h4>Transforma tu vida a través de las preguntas</h3>
+            <p class="text-muted">
+              Muchas veces nuestra comunicación con otros no es como quisiéramos
+              y también nos cuesta comprender el punto de vista de la otra
+              persona, generando muchos conflictos en nuestras relaciones
+              personales.
+            </p>
+            <p class="text-muted"> 
+              En este taller veremos una herramienta clave a la hora de comunicarnos y mejorar nuestras relaciones personales: “El arte de Preguntar”.
+Aprenderemos a formular buenas preguntas que nos permitirán entre otras cosas:
+            </p>
+            <p>
+              <ul class="text-muted"> 
+                <li>Tener una mejor comprensión de mí, de otras personas, de mi equipo y entorno.</li>
+              <li>Tener una comunicación más poderosa y efectiva.</li>
+            <li>Salir de tu zona de confort para abrirte a nuevas posibilidades.</li>  
+            </ul>
+            </p>
+            <p class="text-muted">La invitación es a participar de este entretenido taller donde experimentarás el verdadero poder de las preguntas y como ellas pueden transformarán tu vida.</p>
             <p><a class="btn btn-secondary" href="#">Ver detalle &raquo;</a></p>
           </div>
         </div>
