Aplicando SASS I a todo mi proyecto

--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style_sass.css" />
 
     <link
       rel="shortcut icon"
@@ -39,7 +39,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
                   href="../index.html"
                 >
@@ -47,7 +47,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./quienessomos.html">Quienes somos</a>
+                <a class="nav-link active" href="./quienessomos.html">Quienes somos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./talleres.html">Talleres</a>
