--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style_sass.css" />
 
     <link
       rel="shortcut icon"
@@ -39,7 +39,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
                   href="../index.html"
                 >
@@ -50,7 +50,7 @@
                 <a class="nav-link" href="./quienessomos.html">Quienes somos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./talleres.html">Talleres</a>
+                <a class="nav-link active" href="./talleres.html">Talleres</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./confian.html">Clientes</a>
@@ -90,7 +90,7 @@
         <div class="row">
           <hr class="featurette-divider" />
           <div class="col-lg-4">
-            <img src="../img/taller1.jpg" class="content__img" />
+            <img src="../img/taller1.jpg" class="content-img" />
 
             <h4>La libertad de ser feliz</h4>
             <p class="text-muted">
@@ -113,7 +113,7 @@
           </div>
 
           <div class="col-lg-4">
-            <img src="../img/taller3.jpg" class="content__img" />
+            <img src="../img/taller3.jpg" class="content-img" />
 
             <h4>Descubriendo la meditación</h2>
             <p class="text-muted">
@@ -131,7 +131,7 @@
             <p><a class="btn btn-secondary" href="#">Ver detalle &raquo;</a></p>
           </div>
           <div class="col-lg-4">
-            <img src="../img/taller2.jpg" class="content__img" />
+            <img src="../img/taller2.jpg" class="content-img" />
 
             <h4>Transforma tu vida a través de las preguntas</h3>
             <p class="text-muted">
