--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -11,7 +11,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/style_sass.css" />
 
     <link
       rel="shortcut icon"
@@ -39,7 +39,7 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a
-                  class="nav-link active"
+                  class="nav-link"
                   aria-current="page"
                   href="../index.html"
                 >
@@ -56,7 +56,7 @@
                 <a class="nav-link" href="./confian.html">Clientes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./contactanos.html">Contacto</a>
+                <a class="nav-link active" href="./contactanos.html">Contacto</a>
               </li>
             </ul>
             <form class="d-flex">
@@ -87,7 +87,7 @@
         </div>
       </div>
 
-      <div class="container -sm">
+      <div class="container-sm">
         <form>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">
@@ -152,7 +152,7 @@
             </div>
 
             <div class="row py-lg-5">
-              <button type="submit" class="contacto__btn-enviar">Enviar</button>
+              <button type="submit" class="container-sm__btn-enviar">Enviar</button>
             </div>
        
           </fieldset>
