Aplicando SASS II

--- a/pages/confian.html
+++ b/pages/confian.html
@@ -83,17 +83,17 @@
             alt=""
           />
   
-          <div class="row py-lg-5">
-            <div class="col-lg-11 col-md-8 mx-auto">
-              <h1 class="fw-light">Nuestros clientes</h1>
-              <p class="lead text-muted">
+         
+  
+              <h1 class="titularPagina">Nuestros clientes</h1>
+              <p class="subTitularPagina--center">
                Nuestros clientes logran grandes cambios, gracias a las poderosas herramientas de autoconocimiento que ponemos a disposicion.
               </p>
-              <p class="lead text-muted">
+              <p class="subTitularPagina--center">
                 ¿Qué es lo que dicen?
               </p>
-            </div>
-          </div>
+  
+         
         </section>
         <div class="container marketing">
           <div class="row row-cols-1 row-cols-md-3 g-4">
