--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -77,8 +77,8 @@
     <main>
       <div class="container marketing">
         <div class="row py-lg-5">
-          <h1 class="fw-light">Contáctanos</h1>
-          <p class="lead text-muted">
+          <h1 class="titularPagina--center">Contáctanos</h1>
+          <p class="subTitularPagina--center">
             Café con Sentido Lorem ipsum dolor sit amet consectetur adipisicing
             elit. Illum, sed voluptatum beatae libero ut velit adipisci! Officia
             fugiat porro tempora reiciendis libero ea! Eveniet corporis numquam
@@ -152,7 +152,7 @@
             </div>
 
             <div class="row py-lg-5">
-              <button type="submit" class="container-sm__btn-enviar">Enviar</button>
+              <button type="submit" class="btn-formulario">Enviar</button>
             </div>
        
           </fieldset>
