--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -84,7 +84,7 @@
 
         <div class="row py-lg-5">
           <div class="col-lg-11 col-md-8 mx-auto">
-            <h1 class="fw-light">Quienes Somos</h1>
+            <h1 class="titularPagina">Quienes Somos</h1>
             <p class="lead text-muted">
               Muchos de nosotros tenemos dificultades para sentirnos plenos.
               Existen diversos motivos como sentir ansiedad por el futuro, el sufrimiento por hechos pasados, aprendizajes que antiguamente nos sirvieron pero que ahora nos limitan, la falta de autoconocimiento, la sensación de soledad, el compararnos con la vida de otros, una desconexión emocional y tantos otros aspectos que impiden lograr nuestro objetivo de vivir con paz y armonía.
@@ -101,7 +101,7 @@ En Café con Sentido desarrollamos espacios de escucha, de inspiración, de crea
               Te invitamos a trabajar con nosotros, a inscribirte a nuestros espacios y talleres donde el único objetivo es que vivas una vida más feliz.
             </p>
             <p>
-              <a href="./contactanos.html" class="btn btn-primary my-2">
+              <a href="./contactanos.html" class="btn-contactanos">
                 Habla con un Coach
               </a>
             </p>
