--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -77,8 +77,8 @@
     <main>
       <div class="container marketing">
         <div class="row py-lg-5">
-          <h1 class="fw-light">Talleres y Aprendizajes</h1>
-          <p class="lead text-muted">
+          <h1 class="titularPagina--center">Talleres y Aprendizajes</h1>
+          <p class="subTitularPagina--center">
             En Café con Sentido hemos creado espacios de escucha, de
             aprendizajes, de inspiración y creatividad para poner al servicio de
             personas, empresas y de toda la comunidad entregando poderosas
@@ -109,7 +109,7 @@
               experimentando una nueva mirada de la felicidad y haciéndola
               perdurable en el tiempo.
             </p>
-            <p><a class="btn btn-secondary" href="#">Ver detalle &raquo;</a></p>
+            <p><a class="btn-talleres" href="#">Ver detalle &raquo;</a></p>
           </div>
 
           <div class="col-lg-4">
@@ -128,7 +128,7 @@
               hora de meditar sino que también hacemos algunos ejercicios que te
               ayudarán a "subirte a la bicicleta".
             </p>
-            <p><a class="btn btn-secondary" href="#">Ver detalle &raquo;</a></p>
+            <p><a class="btn-talleres" href="#">Ver detalle &raquo;</a></p>
           </div>
           <div class="col-lg-4">
             <img src="../img/taller2.jpg" class="content-img" />
@@ -152,7 +152,7 @@ Aprenderemos a formular buenas preguntas que nos permitirán entre otras cosas:
             </ul>
             </p>
             <p class="text-muted">La invitación es a participar de este entretenido taller donde experimentarás el verdadero poder de las preguntas y como ellas pueden transformarán tu vida.</p>
-            <p><a class="btn btn-secondary" href="#">Ver detalle &raquo;</a></p>
+            <p><a class="btn-talleres" href="#">Ver detalle &raquo;</a></p>
           </div>
         </div>
       </div>
