Aplicando SASS II + SEO Desafio

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Cafe con Sentido</title>
+    <title>Inicio | Cafe con Sentido</title>
+    
+    <meta name="description" content="Nuestro propósito es hacer personas y equipos más felices y junto con ello transformar positivamente el entorno, tendiendo puentes para que habitemos una vida de manera diferente, una vida con una plenitud real y sostenible">
+    <meta name="keywords" content="cafe filosofico, sentido de vida, café en sentido, café y sentidos, cafe 5 sentidos">
+
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -103,7 +107,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img
-              src="./img/carrusel3.jpg"
+              src="./img/carrusel1.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -135,7 +139,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./img/carrusel1.jpg"
+              src="./img/carrusel3.jpg"
               class="d-block w-100"
               alt="..."
             />
@@ -177,7 +181,7 @@
       <div class="row">
         <hr class="featurette-divider" />
         <div class="col-lg-4">
-          <img src="../img/taller1.jpg" class="content-img" />
+          <img src="./img/taller1.jpg" class="content-img" />
 
           <h4>La libertad de ser feliz</h4>
           <p class="text-muted">
@@ -190,7 +194,7 @@
         </div>
 
         <div class="col-lg-4">
-          <img src="../img/taller3.jpg" class="content-img" />
+          <img src="./img/taller3.jpg" class="content-img" />
 
           <h4>Descubriendo la meditación</h2>
           <p class="text-muted">
@@ -202,7 +206,7 @@
           <p><a class="btn-talleres" href="#">Ver detalle &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <img src="../img/taller2.jpg" class="content-img" />
+          <img src="./img/taller2.jpg" class="content-img" />
 
           <h4>Transforma tu vida a través de las preguntas</h3>
           <p class="text-muted">
