--- a/pages/confian.html
+++ b/pages/confian.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Confian en Nosotros</title>
+    <title>Confian en Nosotros | Cafe con Sentido</title>
+    
+    <meta name="keywords" content="cafe filosofico, sentido de vida,café en sentido,café y sentidos,cafe 5 sentidos,coaching ontologico	,coaching que es	,coaching empresarial,coaching organizacional,coaching argentina,coaching chile,coaching latam,coaching agile">
+
+    <meta name="description" content="Nuestros clientes logran grandes cambios, gracias a las poderosas herramientas de autoconocimiento que ponemos a disposicion. ¿Qué es lo que dicen?">
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
