--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Habla con un Coach</title>
+    <title>Contactanos | Cafe con Sentido</title>
+    <meta name="keywords" content="felicidad extrema,felicidad aristoteles,felicidad absoluta,felicidad amor,felicidad budismo,felicidad buda,felicidad concepto,meditacion guiada,meditaciones,meditacion para la ansiedad,meditacion guiada corta,meditacion guiada para dormir,meditacion mindfulness,meditacion amor propio,meditacion al aire libre,meditacion amor propio y autoestima,meditacion a la mañana,meditacion a conciencia plena,meditacion a dios,meditacion budista,meditación beneficios,meditacion bombones para el alma,meditacion buda">
+
+    <meta name="description" content="En Café con Sentido hemos creado espacios de escucha, de aprendizajes, de inspiración y creatividad para poner al servicio de personas, empresas y de toda la comunidad entregando poderosas herramientas de autoconocimiento y cuidado para avanzar a una mejor versión de sí mismos y una mayor plenitud. Contactanos si quieres saber más">
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
