--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Talleres</title>
+    <title>Talleres y Aprendizajes | Cafe con Sentido</title>
+    <meta name="keywords" content="felicidad extrema,felicidad aristoteles,felicidad absoluta,felicidad amor,felicidad budismo,felicidad buda,felicidad concepto,meditacion guiada,meditaciones,meditacion para la ansiedad,meditacion guiada corta,meditacion guiada para dormir,meditacion mindfulness,meditacion amor propio,meditacion al aire libre,meditacion amor propio y autoestima,meditacion a la mañana,meditacion a conciencia plena,meditacion a dios,meditacion budista,meditación beneficios,meditacion bombones para el alma,meditacion buda">
+
+    <meta name="description" content="Un centenar de personas han pasado por pasado por nuestros talleres, experimentando una nueva mirada de la felicidad y haciéndola perdurable en el tiempo.">
+    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
